Trying out StructuredConcurrency