@@ -37,8 +37,14 @@ dependencies {
     testRuntimeOnly libs.junit.launcher
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += ['--enable-preview']
+    options.release = 26
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
 
 jar {
